# 1052-OS

./: .gitignore  README.md
backend/: package-lock.json  package.json  pyproject.toml
backend/src/modules/sql/: db_runner.py  sql.client.ts
backend/src/modules/sql/__tests__/: sql.client.test.ts  test_db_runner.py
